[tool.poetry]
name = "git-pp"
version = "1.4.1"
description = "Git utility for auto-committing and concurrent pushing"
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
git-pp = "git_pp.git_pp:main_sync"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
