[tool.poetry]
name = "git-pp"
version = "1.10.5"
description = "A (tiny) Git utility for auto-committing and concurrent pushing"
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: Console",
	"Operating System :: Unix",
	"Framework :: AsyncIO",
	"License :: OSI Approved :: MIT License",
	"Topic :: Software Development :: Version Control :: Git",
	"Typing :: Typed"
]
homepage = "https://github.com/tddschn/git-pp"
repository = "https://github.com/tddschn/git-pp"
keywords = ["git", "asyncio"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/git-pp/issues"

[tool.poetry.scripts]
git-pp = "git_pp.git_pp:main_sync"

[tool.poetry.dependencies]
python = "^3.10"
uvloop = {version = "^0.16.0", extras = ["uvloop"]}
utils-tddschn = "0.1.6"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
yapf = "^0.32.0"
logging-utils-tddschn = "^0.1.5"
toml = "^0.10.2"
icecream = "^2.1.2"
pyinstrument = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
